--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -3,6 +3,14 @@ layout: null
 ---
 
 @import url("pygment_highlights.css");
+@import 'main
+{%- if jekyll.environment == 'production' -%}
+  .bundle
+{%- endif -%}
+';
+
+
+
 
 :root {
   /* config file CSS variables */
