--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -4,7 +4,7 @@ layout: null
 
 @import url("pygment_highlights.css");
 
-@import url("main.bundle.scss");
+@import "main.bundle.scss";
 
 
 @import 'main
