--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -3,7 +3,7 @@ layout: null
 ---
 
 @import url("pygment_highlights.css");
-@import url("main.bundle");
+@import url("main.bundle.scss");
 @import 'main
 {%- if jekyll.environment == 'production' -%}
   .bundle
