--- a/assets/css/addon/syntax.css
+++ b/assets/css/addon/syntax.css
@@ -3,8 +3,7 @@
  * 5 | @import 'colors/syntax-light';
  *   |         ^^^^^^^^^^^^^^^^^^^^^
  *   '
- *   addon/syntax.scss 5:9  @import
- *   main.scss 6:9          root stylesheet */
+ *   syntax.scss 5:9  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -14,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import 'colors/syntax-light';\a   \2502          ^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   addon/syntax.scss 5:9  @import\a   main.scss 6:9          root stylesheet";
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import 'colors/syntax-light';\a   \2502          ^^^^^^^^^^^^^^^^^^^^^\a   \2575 \a   syntax.scss 5:9  root stylesheet";
 }
