--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -3,12 +3,7 @@ layout: null
 ---
 
 @import url("pygment_highlights.css");
-@import url("main.bundle.css");
-@import 'main
-{%- if jekyll.environment == 'production' -%}
-  .bundle
-{%- endif -%}
-';
+@import "main.bundle";
 
 
 
