--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1262,6 +1262,63 @@ pre {
   }
 } /* #archives */
 
+/* --- News --- */
+
+.timeline {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 2px;
+    background: #ccc;
+  }
+}
+
+.timeline-item {
+  position: relative;
+  margin: 1em 0;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 1em;
+    left: 0;
+    width: 12px;
+    height: 12px;
+    background: #fff;
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    transform: translateX(-50%);
+  }
+
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
+
+.timeline-content {
+  padding: 1em;
+  background: #f9f9f9;
+  border-radius: 4px;
+  font-weight: normal;
+  margin-left: 2em;
+  /* Abstand vom Zeitstrahl */
+}
+
+
+
+
+
+
 @media all and (max-width: 576px) {
   #archives {
     margin-top: -1rem;
