--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,20 +65,20 @@ comments: true
         {% include social-share.html %}
       {% endif %}
       
-          <div id="disqus_thread"></div>
+<div id="disqus_thread"></div>
 <script>
-    /**
+    / * 
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    
+    */ 
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    this.page.url = 'https://sjpark2free.github.io{{ page.url }}';
+    this.page.identifier = '{{page.id}}';
     };
-    */
+    
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
-    s.src = 'https://sjpark2free-blog.disqus.com/embed.js';
+    s.src = 'https://sjpark2free.disqus.com/embed.js';
     s.setAttribute('data-timestamp', +new Date());
     (d.head || d.body).appendChild(s);
     })();
